# cycle-analyzer

./: .travis.yml  Cargo.toml  appveyor.yml  build.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
front/: package-lock.json  package.json
front/public/: index.html
front/src/: ApiClient.ts  App.tsx  Config.ts  CytoscapeGraph.tsx  GraphComponent.tsx  Model.ts  Navbar.tsx  VisGraphWrapper.tsx  index.css  types.d.ts
src/: configuration.rs  error.rs  main.rs  model.rs  parsers.rs  server.rs  utils.rs
