[package]
name = "cycle-analyzer"
version = "0.1.0"
authors = ["Kacper Marzecki <kacper-marzecki@github.noreply.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nom = "5.1.1"
petgraph = "0.5.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
env_logger = "0.7"
actix-web-static-files = "2.0"
log = "0.4.8"

[build-dependencies]
actix-web-static-files = "2.0"
